# backend/src/controllers/handlers.ts
@@ -43,6 +43,7 @@ export default {
     listOrders: orderHandler.listOrders,
     requestNewOrder: orderHandler.requestNewOrder,
     confirmOrder: orderHandler.confirmOrder,
-    cancelOrder: orderHandler.cancelOrder
+    cancelOrder: orderHandler.cancelOrder,
+    changeOrderStatus: orderHandler.changeOrderStatus,
 
 }
